# Toka

./: .dockerignore  .env.cursor  .gitignore  AGENT_MIGRATION_SUMMARY.md  ARCHITECTURE_RESEARCH.md  BLOAT_REDUCTION_RESULTS.md  CLEANUP_SUMMARY.md  CODEBASE_BLOAT_ANALYSIS.md  CONTRIBUTING.md  CONTROL_FLOW_GRAPH_README.md  CONTROL_FLOW_SUMMARY.md  CRATES.md  Cargo.toml  Cargo.toml.backup  DEPENDENCY_GRAPH_README.md  DOCUMENTATION_AUDIT_AND_VERSIONING_ANALYSIS.md  DOCUMENTATION_LINKAGE_IMPROVEMENTS.md  DOCUMENTATION_MAINTENANCE_SYSTEM_PROPOSAL.md  Dockerfile  Dockerfile.cursor  Dockerfile.dev  Dockerfile.prod  EVENT_SYSTEM_REFACTOR.md  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_ANALYSIS_COMPLETE.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  LICENSE-MIT  MEMORY_LEAK_ANALYSIS.md  Makefile  PERFORMANCE_OBSERVABILITY_COMPLETION_SUMMARY.md  PHASES_CONTEXT.md  PHASE_3_MERGE_AND_NEXT_STEPS_SUMMARY.md  QUICKSTART.md  QUICKSTART_FIXED.md  QUICK_START.md  README-Docker.md  README-Orchestration.md  README.md  (+45 more)
.cargo/: config.toml
.cursor/: Dockerfile  (+12 more)
apps/toka-cli/: Cargo.toml  README.md
apps/toka-cli/src/: lib.rs  main.rs
apps/toka-cli/tests/: cli.rs
crates/domain/: Cargo.toml  README.md
crates/domain/examples/: content_unlock_flow.rs
crates/domain/src/: account.rs  lib.rs  pricing_model.rs
crates/ledger/: Cargo.toml  HYBRID_LEDGER.md  README.md
crates/ledger/examples/: atomic_transactions.rs  basic_usage.rs  zero_investment.rs
crates/ledger/src/: README.md  event.rs  ledger.rs  lib.rs  storage.rs
crates/raft-core/: Cargo.toml
crates/raft-core/src/: config.rs  error.rs  lib.rs  log.rs  message.rs  node.rs  state.rs
crates/raft-storage/: Cargo.toml
crates/raft-storage/src/: error.rs  file.rs  lib.rs  memory.rs  snapshot.rs  storage.rs
crates/runtime/: .env.example  .gitignore  CREDENTIALS_SETUP.md  Cargo.toml  STRIPE_API_SPEC.md  STRIPE_TESTING_GUIDE.md  env.example
crates/runtime/examples/: localhost_webhook_server.rs  secure_stripe_config.rs  stripe_sandbox_demo.rs
crates/runtime/src/: config.rs  lib.rs  stripe_integration.rs  user_ledger.rs
crates/smart-embedder/: Cargo.toml  README.md
crates/smart-embedder/src/: lib.rs
crates/toka-agent-runtime/: Cargo.toml
crates/toka-agent-runtime/examples/: basic_agent.rs  real_integration.rs
crates/toka-agent-runtime/src/: capability.rs  executor.rs  integration.rs  lib.rs  orchestration_integration.rs  process.rs  progress.rs  resource.rs  task.rs
crates/toka-agents/: Cargo.toml  README.md  SUMMARY.md
crates/toka-agents-api/: Cargo.toml  README.md
crates/toka-agents-api/src/: lib.rs
crates/toka-agents/src/: agent.rs  bundle.rs  capabilities.rs  coordination.rs  executor.rs  integration.rs  lib.rs  lifecycle.rs  memory_adapter.rs  metadata.rs  orchestration.rs  prelude.rs  progress.rs  reasoning.rs  resources.rs  symbolic.rs  system.rs
crates/toka-agents/src/reasoning/: symbolic.rs
crates/toka-agents/tests/: agent_robustness_tests.rs  symbolic_tests.rs  tool_bridge.rs
crates/toka-analysis-tools/: Cargo.toml  README.md
crates/toka-analysis-tools/examples/: integration.rs
crates/toka-analysis-tools/src/: cache.rs  executor.rs  lib.rs  metrics.rs  output.rs  sandbox.rs  security.rs  validation.rs
crates/toka-analysis-tools/src/tools/: mod.rs
crates/toka-auth/: Cargo.toml  Cargo.toml.backup  DEPENDENCY_GRAPH.md  README.md  tree.txt
crates/toka-auth/src/: lib.rs
crates/toka-auth/tests/: claims_validation.rs  debug_test.rs  jwt_validation.rs  timing_test.rs  token_expiry_prop.proptest-regressions  token_expiry_prop.rs
crates/toka-bus/: Cargo.toml  README.md
crates/toka-bus-api/: Cargo.toml  README.md
crates/toka-bus-api/src/: lib.rs
crates/toka-bus-core/: Cargo.toml  Cargo.toml.backup
crates/toka-bus-core/src/: lib.rs
crates/toka-bus-memory/: Cargo.toml  README.md
crates/toka-bus-memory/src/: lib.rs
crates/toka-bus-persist/: Cargo.toml  README.md
crates/toka-bus-persist/src/: lib.rs
crates/toka-bus/src/: lib.rs
crates/toka-capability/: Cargo.toml
crates/toka-capability/src/: lib.rs  token.rs  validator.rs
crates/toka-capability/tests/: token_tests.rs
crates/toka-cli/: Cargo.toml  README.md
crates/toka-cli/src/: main.rs
crates/toka-collaborative-auth/: Cargo.toml  README.md  env.example
crates/toka-collaborative-auth/src/: config.rs  github.rs  lib.rs  main.rs  oauth.rs  permissions.rs  service.rs  session.rs  storage.rs
crates/toka-config-cli/: Cargo.toml  README.md
crates/toka-config-cli/src/: cli.rs  config.rs  error.rs  main.rs  validation.rs
crates/toka-core/: Cargo.toml  README.md
crates/toka-core/src/: config.rs  currency.rs  economics.rs  error.rs  ids.rs  lib.rs  models.rs  pricing.rs  products.rs  resources.rs  types.rs  utils.rs  vaults.rs
crates/toka-core/src/economics/: fees.rs  payouts.rs  platform_economics.rs
crates/toka-core/src/pricing/: agent_pricing.rs  config.rs  policies.rs
crates/toka-core/src/products/: credit_packages.rs
crates/toka-core/tests/: currency_edge_cases_tests.rs  currency_tests.rs  ids_tests.rs  pricing_and_economics_tests.rs
crates/toka-cvm/: Cargo.toml  README.md
crates/toka-cvm/src/: lib.rs
crates/toka-demo-environment/: Cargo.toml
crates/toka-events/: Cargo.toml  README.md
crates/toka-events-api/: Cargo.toml  README.md
crates/toka-events-api/src/: lib.rs
crates/toka-events-core/: Cargo.toml  README.md
crates/toka-events-core/src/: lib.rs
crates/toka-events/src/: api.rs  bus.rs  dispatcher.rs  events.rs  in_memory.rs  lib.rs  memory.rs  models.rs  persistence.rs  rich.rs  strategy.rs
crates/toka-events/tests/: event_bus.rs  event_bus_tests.rs  in_memory_tests.rs  vault.rs
crates/toka-kernel/: Cargo.toml  Cargo.toml.backup  README.md
crates/toka-kernel/src/: lib.rs  registry.rs
crates/toka-kernel/src/tools/: capabilities.rs  execution.rs  mod.rs  resources.rs  security.rs
crates/toka-kernel/tests/: e2e.rs  extension_handler.rs  kernel.rs
crates/toka-ledger-agents/: Cargo.toml  README.md
crates/toka-ledger-agents/src/: bus.rs  intent.rs  lib.rs
(+666 files in other folders)
