[workspace]
resolver = "2"
members = [
    # Security
    "crates/toka-security-auth",

    # Agents & Runtime
    "crates/toka-agents",
    "crates/toka-runtime",
    "apps/toka-cli",

    # Tools
    "crates/toka-tools-api",
    "crates/toka-tools",

    # Events crate replacing `toka-vault`
    "crates/toka-events",

    # New member
    "crates/toka-bus",
    "crates/toka-memory",
    "crates/toka-storage",

    # New member
    "crates/toka-events-api",

    # New member
    "crates/toka-memory-api",

    # New member
    "crates/toka-bus-api",

    # New member
    "crates/toka-storage-api",

    # Agents API - newly extracted from toka-agents
    "crates/toka-agents-api",

    # Primitives API (ids, currency)
    "crates/toka-primitives-api",
]

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.36", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
argon2 = "0.5"
jsonwebtoken = "9.2"
rand = "0.8"
dotenv = "0.15"
config = "0.14"
utoipa = { version = "4.1", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "5.0", features = ["axum"] }
clap = { version = "4.5", features = ["derive"] }

# Development dependencies
tokio-test = "0.4"
sqlx-test = "0.7"

base64ct = "1.7.3"

[workspace.package]
version = "0.1.0"
authors = ["Seb"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ScrappyAI/toka"
description = "Toka – modular agent and tool runtime under the Agentix organisation."
