[workspace]
resolver = "2"
members = [
    # Core kernel ecosystem (v0.2) - deterministic layer
    "crates/toka-types",
    "crates/toka-auth",
    "crates/toka-bus-core", 
    "crates/toka-kernel",
    
    # Storage layer - core abstractions and drivers
    "crates/toka-store-core",
    "crates/toka-store-memory",
    "crates/toka-store-sled",
    "crates/toka-store-sqlite",
    
    # Runtime layer - fuzzy/async coordination
    "crates/toka-runtime",
    
    # Tools and utilities
    "crates/toka-tools",

    # Applications / demos
    "crates/toka-cli",
    "crates/toka-config-cli",
]

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.36", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
argon2 = "0.5"
jsonwebtoken = "9.1"
rand = "0.8"
dotenv = "0.15"
config = "0.14"
utoipa = { version = "4.1", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "5.0", features = ["axum"] }
clap = { version = "4.5", features = ["derive"] }

# Development dependencies
tokio-test = "0.4"
sqlx-test = "0.7"



# plugin registry helper
once_cell = "1.19"

proptest = "1.4"

[workspace.package]
version = "0.2.1"
authors = ["Seb"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ScrappyAI/toka"
description = "Toka – modular agent and tool runtime under the Agentix organisation."
