[package]
name = "toka-cli"
version = "0.1.0"
edition = "2021"

# The CLI crate is intentionally lightweight and relies on existing workspace deps.

[dependencies]
# Use workspace-managed dependencies where possible.
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }

# Additional runtime dependencies for the interactive playground
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
# Access agent trait for custom playground agent implementation
toka-agents = { path = "../../crates/toka-agents" }

# Runtime with auth & vault features for CLI operations
toka-runtime = { path = "../../crates/toka-runtime", version = "0.1.0", features = ["vault", "toolkit", "auth"] }

serde_json = "1"
toka-toolkit-core = { path = "../../crates/toka-toolkit-core" } 