[package]
name = "toka-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI helpers
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["rt-multi-thread","macros"] }
async-trait = { workspace = true }

# Core workspace crates

toka-kernel = { path = "../../crates/toka-kernel" }
toka-auth   = { path = "../../crates/toka-auth" }
toka-events = { path = "../../crates/toka-events" }
toka-types  = { path = "../../crates/toka-types" }

# Additional runtime dependencies for the interactive playground
tracing-subscriber = { workspace = true }
tracing = { workspace = true }

# Access agent trait for custom playground agent implementation
toka-agents = { path = "../../crates/toka-agents" }

# Runtime with auth & vault features for CLI operations
toka-runtime = { path = "../../crates/toka-runtime", version = "0.1.0", features = ["vault", "toolkit", "auth"] }

toka-toolkit-core = { path = "../../crates/toka-toolkit-core" } 