[package]
name = "domain"
version = "0.1.0"
edition = "2021"
description = "Business domain logic for the Toka project"
license = "MIT OR Apache-2.0"

[dependencies]
rust_decimal = { version = "1.32", features = ["serde"] }
rust_decimal_macros = "1.32"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
