[package]
name = "ledger"
version = "0.1.0"
edition = "2021"
description = "Server-side authoritative ledger with double-entry accounting"
license = "MIT OR Apache-2.0"

[dependencies]
domain = { path = "../domain" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
rust_decimal = { version = "1.32", features = ["serde"] }
rust_decimal_macros = "1.32" 

[[example]]
name = "zero_investment"
path = "examples/zero_investment.rs"

