[package]
name = "raft-core"
version = "0.2.1"
authors = ["Seb"]
edition = "2021"
license = "Apache-2.0"
description = "Core Raft consensus algorithm implementation"
documentation = "https://docs.rs/raft-core"
repository = "https://github.com/ScrappyAI/toka"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
proptest = { workspace = true }