[package]
name = "raft-storage"
version = "0.2.1"
authors = ["Seb"]
edition = "2021"
license = "Apache-2.0"
description = "Storage abstraction for Raft consensus algorithm"
documentation = "https://docs.rs/raft-storage"
repository = "https://github.com/ScrappyAI/toka"

[dependencies]
raft-core = { path = "../raft-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = "3.8"