[package]
name = "runtime"
version = "0.1.0"
edition = "2021"
description = "Orchestration layer for the Toka project."
license = "MIT OR Apache-2.0"

[dependencies] 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.32", features = ["serde"] }
rust_decimal_macros = "1.32"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
base64 = "0.21"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
urlencoding = "2.1"
async-trait = "0.1"
hyper = { version = "0.14", features = ["full"] }

[[example]]
name = "secure_stripe_config"
path = "examples/secure_stripe_config.rs"

[[example]]
name = "stripe_sandbox_demo"
path = "examples/stripe_sandbox_demo.rs"

[[example]]
name = "localhost_webhook_server"
path = "examples/localhost_webhook_server.rs" 