[package]
name = "smart-embedder"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Agentic event summarizer + embedding generator for Toka Vault."

[dependencies]
async-trait = "0.1"
anyhow = "1.0"
ndarray = "0.15"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
# Heavy deps are optional – enable via `llm` or `transformers` features.
rust-bert = { version = "0.22", optional = true }
reqwest   = { version = "0.11", features = ["json"], optional = true }

[features]
# Enable when you want to run local transformer embeddings.
transformers = ["dep:rust-bert"]
# Enable when you want to use the simple OpenAI-compatible client.
openai = ["dep:reqwest"] 