[package]
name = "toka-agent-runtime"
version = "0.1.0"
edition = "2021"
license.workspace = true
repository.workspace = true
description = "Agent execution runtime for Toka OS - interprets and executes agent configurations with LLM integration"

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

# Toka dependencies
toka-bus-core = { path = "../toka-bus-core" }
toka-llm-gateway = { path = "../toka-llm-gateway" }
toka-runtime = { path = "../toka-runtime" }
toka-types = { path = "../toka-types" }
toka-tools = { path = "../toka-tools", features = ["external-tools"] }

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
toka-auth = { path = "../toka-auth" }

[features]
default = []
testing = []