[package]
name = "toka-agents-api"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Pure data types and minimal trait contracts for agent implementations within the Toka platform. No heavy deps, suitable for no_std where possible."
repository = "https://github.com/ScrappyAI/toka"
authors = ["Toka Contributors <dev@toka.ai>"]

[dependencies]
# Optional, lightweight deps gated behind features.
serde = { version = "1", default-features = false, features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
semver = { version = "1", features = ["serde"], optional = true }
uuid = { version = "1", features = ["v4", "serde"], optional = true }
bitflags = { version = "2", features = ["serde"], optional = true }

anyhow = { version = "1", optional = true }
async-trait = { version = "0.1", optional = true }

# API-level dependency for persistence traits
# Only pulled in when the `async` feature is enabled.
toka-memory-api = { path = "../toka-memory-api", optional = true, default-features = false, features = ["async"] }

[features]
# Compile with the Rust standard library by default; consumers can opt-out for `no_std`.
default = ["std", "serde", "async"]
# Use the Rust standard library.
std = []
# Enable `serde` derives + helpers.
serde = ["dep:serde", "dep:serde_json", "dep:semver", "dep:uuid", "dep:bitflags"]
# Enable async traits + `anyhow` + linkage to memory-api async flavour.
async = ["dep:async-trait", "dep:anyhow", "dep:toka-memory-api"] 