[package]
name = "toka-agents"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Default agent implementations for the Toka platform."

[dependencies]
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
toka-events = { path = "../toka-events" }
# typetag removed – core has no dyn-serde by default 
toka-security-vault = { path = "../toka-security-vault" }
toka-toolkit-core = { path = "../toka-toolkit-core", optional = true }

[features]
default = ["core"]
core = []
toolkit = ["toka-toolkit-core"] 