[package]
name = "toka-agents"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Default agent implementations for the Toka platform."

[dependencies]
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
semver = { version = "1", features = ["serde"] }
bitflags = { version = "2", features = ["serde"] }
toka-bus = { path = "../toka-bus" }
toka-events = { path = "../toka-events", optional = true }
toka-toolkit-core = { path = "../toka-toolkit-core", optional = true }
toka-memory = { path = "../toka-memory" }

[features]
default = ["core"]
core = []
toolkit = ["toka-toolkit-core"]
vault = ["toka-events"]

[dev-dependencies]
tempfile = "3" 