[package]
name = "toka-auth"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
toka-types = { path = "../toka-types" }
serde = { workspace = true, features = ["derive"] }
async-trait = { workspace = true }
jsonwebtoken = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
proptest = "1.4"
