[package]
name = "toka-bus-api"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Trait contracts and data types for the in-process event bus used across the Toka platform. Lightweight, `no_std`-friendly."
repository = "https://github.com/ScrappyAI/toka"
authors = ["Toka Contributors <dev@toka.ai>"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
anyhow = { version = "1.0", optional = true }
async-trait = { version = "0.1", optional = true }
chrono = { version = "0.4", default-features = false, features=["serde"], optional = true }
uuid = { version = "1.7", features=["v4", "serde"], optional = true }
tokio = { version = "1.36", features=["sync"], optional = true }

[features]
# Default to full serde + async for convenience in typical builds.
default = ["serde-support", "async", "tokio"]

serde-support = ["dep:serde", "dep:serde_json", "dep:chrono", "dep:uuid"]
async = ["dep:async-trait", "dep:anyhow", "tokio"]

# Enable Tokio dependency for APIs that expose broadcast::Receiver.
tokio = ["dep:tokio"]