[package]
name = "toka-bus-memory"
version = "0.2.0-alpha"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "In-memory event bus implementation for the Toka platform using tokio::broadcast"
repository = "https://github.com/ScrappyAI/toka"
keywords = ["events", "bus", "memory", "broadcast", "tokio"]

[dependencies]
# Core dependencies
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["sync", "time", "macros", "rt-multi-thread"] }
uuid = { version = "1.10", features = ["v4", "serde"] }

# Event core types
toka-events-core = { path = "../toka-events-core" }

[dev-dependencies]
tokio-test = "0.4"