[package]
name = "toka-bus"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "In-process event bus abstraction for the Toka platform."

[dependencies]
async-trait = "0.1"
tokio = { workspace = true, features = ["sync", "time"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
toka-bus-api = { path = "../toka-bus-api", features=["async", "serde-support", "tokio"] } 