[package]
name = "toka-cli"
version = "0.1.0"
edition = "2021"

# The CLI crate is intentionally lightweight and relies on existing workspace deps.

[dependencies]
# Use workspace-managed dependencies where possible.
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }

# Runtime with auth & vault features for CLI operations
toka-runtime = { path = "../toka-runtime", version = "0.1.0", features = ["vault", "toolkit", "auth"] } 