[package]
name = "toka-core"
version = "0.1.0"
edition = "2021"
description = "Core business logic and domain rules for the Toka platform, including currency, resource, and identifier definitions."
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust_decimal = { version = "1.32", features = ["serde-str"] }
rust_decimal_macros = "1.32"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
schemars = { version = "0.8", features = ["derive", "rust_decimal", "uuid1"], optional = true }
anyhow = "1.0"

[dev-dependencies]
# Add any test-specific dependencies here if needed later

[features]
# ---------------------------------------------------------------------
# Feature flags
# ---------------------------------------------------------------------
# The crate ships with *no* functionality enabled by default.  Downstream
# consumers explicitly opt-in to the domain areas they need (e.g. `ids`,
# `currency`).  This keeps binary sizes to a minimum for lean desktop /
# edge builds while still allowing `toka-core` to provide a rich, fully
#-featured API when `--all-features` is selected.

default = []

# Fundamental building-blocks ------------------------------------------------
ids       = []                # Type-safe identifiers
currency  = []                # Micro-USD and helpers

# Higher-level domain areas --------------------------------------------------
models     = ["ids", "currency"]           # LLM model metadata / pricing
resources  = ["ids", "currency"]           # Generic resource descriptors
vaults     = ["ids", "currency"]           # Vault metadata structs

economics  = ["currency"]                  # Fee schedules & platform economics
products   = ["ids", "currency"]           # User-facing SKUs such as credit packs
pricing    = ["economics", "products"]     # Pricing policies & service facade

# Tooling -------------------------------------------------------------------
schema-gen = ["dep:schemars"]
