[package]
name = "toka-core"
version = "0.2.1"
edition = "2021"
description = "Core utilities and error handling for Toka Agent OS"
license = "MIT OR Apache-2.0"
authors = ["Toka Team"]

[dependencies]
# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging and tracing
tracing = "0.1"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

[features]
default = []