[package]
name = "toka-events-api"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Toka Contributors <dev@toka.ai>"]
description = "Data types and trait contracts for event handling in the Toka platform. No heavy dependencies; intended to be reused by all event-store implementations."
repository = "https://github.com/ScrappyAI/toka"

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
anyhow = { version = "1.0", optional = true }
async-trait = { version = "0.1", optional = true }
smallvec = { version = "1.13", default-features = false, features=["serde"], optional = true }
blake3 = { version = "1.5", default-features = false, optional = true }
chrono = { version = "0.4", default-features = false, features=["serde"], optional = true }
uuid = { version = "1.7", features=["v4", "serde"], optional = true }
rmp-serde = { version = "1.1", optional = true }

[features]
# Keep the crate lean by default; consumers can enable extras.
default = ["digest", "serde-support"]

serde-support = ["dep:serde", "dep:serde_json", "dep:anyhow", "dep:smallvec", "dep:uuid", "dep:chrono"]
# Digest helpers and hashing utilities
"digest" = ["dep:blake3", "dep:rmp-serde"]

# Optional async trait helpers for store contracts
async = ["dep:async-trait"]