[package]
name = "toka-events"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Ultra-lightweight in-memory event bus for Toka platform. External backends (redis, grpc, etc.) live in separate crates."

[dependencies]
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["sync"] }
chrono = { version = "0.4", features = ["serde"] }

# Core event types
toka-events-core = { path = "../toka-events-core" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
anyhow = "1"

[features]
default = ["rich"]
legacy = []
rich = []