[package]
name = "toka-events"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Canonical event primitives and event store for the Toka platform (successor to `toka-vault`)."
repository = "https://github.com/ScrappyAI/toka"

[dependencies]
# Core dependencies (copied from former `toka-vault`)
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = { version = "1.13", features = ["serde"] }
blake3 = "1.5"
tokio = { workspace = true, features = ["sync", "time"] }
rmp-serde = "1.1"

# For sled persistence backend
sled = { version = "0.34", optional = true }

# For intent clustering
ndarray = { version = "0.15", optional = true }
parking_lot = { version = "0.12", optional = true }

# Add dependency on toka-types
toka-types = { path = "../toka-types" }

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"

[features]
default = ["persist-sled", "memory-vault"]

# Enables the sled-backed persistent implementation
persist-sled = ["dep:sled"]

# Enables the in-memory (non-persistent) vault for testing
memory-vault = []

# Enables online intent clustering using embeddings.
intent-cluster = ["dep:ndarray", "dep:parking_lot"] 