[package]
name = "toka-kernel"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
toka-types = { path = "../toka-types" }
toka-auth = { path = "../toka-auth" }
toka-bus-core = { path = "../toka-bus-core" }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features=["sync"] }
async-trait = { workspace = true }
once_cell = { workspace = true }
